# pomodoro

./: .gitignore  Makefile  alembic.ini  dependency.py  docker-compose.yml  exception.py  gunicorn.conf.py  pyproject.toml  settings.py
alembic/: env.py
alembic/versions/: 2d7ca7960bfd_access_token_nullable.py  2f72634de6c6_ref_user_profile.py  4791322733ec_access_token_delete.py  53abdf9762cb_init.py  68f627b3343d_category_type_optional.py  b8558464e5ba_category_delete_type.py  ce1947539303_extend_user_profile.py  e26d8f81b304_yandex_access_token.py  e886e0a656b6_user_id_in_tasks.py  efd162f93f87_user_init.py
app/: dependency.py  exception.py  main.py  settings.py
app/client/: __init__.py  google.py  yandex.py
app/handlers/: __init__.py  auth.py  ping.py  tasks.py  user.py
app/infrastructure/cache/: accessor.py
app/infrastructure/database/: __init__.py  accessor.py
app/models/: __init__.py  user.py
app/repository/: __init__.py  cache_task.py  task.py  user.py
app/schema/: __init__.py
app/service/: __init__.py  auth.py  task.py  user.py
app/tasks/: handlers.py  models.py  schema.py  service.py
app/tasks/repository/: __init__.py  cache_task.py  task.py
app/users/auth/: handlers.py  service.py
cache/: __init__.py  accessor.py
client/: google.py  yandex.py
database/: accessor.py  database.py  models.py
handlers/: __init__.py  auth.py  ping.py  tasks.py  user.py
models/: tasks.py  user.py
repository/: __init__.py  cache_task.py  task.py  user.py
schema/: __init__.py  task.py  user.py
service/: auth.py  task.py  user.py
(+6 files in other folders)
