[tool.poetry]
name = "pomodoro-time"
version = "0.1.0"
description = ""
authors = ["Maxim Krivoshein <max.kriv0s@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
psycopg2-binary = "^2.9.10"
redis = "^5.2.1"
black = "^25.1.0"
python-jose = {extras = ["cryptography"], version = "^3.4.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
requests = "^2.32.3"
httpx = "^0.28.1"
asyncpg = "^0.30.0"
greenlet = "^3.1.1"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
